--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 font-family: 'Gloria Hallelujah', cursive;
 
+/* #7CB696 greengray */
+/* #897CB6 purplegray */
+/* #BCC9D2 shipgray */
+
 body {
 }
 
@@ -8,12 +12,14 @@ div {
   flex-direction: column;
   font-family: 'Gloria Hallelujah';
   font-weight: lighter;
+  background-color: #7CB696;
 }
 
 section {
   display: flex;
   flex-direction: column;
   font-family: 'Gloria Hallelujah';
+  background-color: #BCC9D2;
 }
 
 button {
@@ -29,6 +35,7 @@ text {
   flex-direction: column;
   align-items:flex-end;
   height: 20%;
+  width: 100%;
   margin: 0px;
   border-style: solid;
 }
@@ -64,19 +71,87 @@ text {
 .game-board {
   height: 60%;
   width: 100%;
-  border-style: solid;
   margin: 0px;
-}
-.game-board__classic-game-button{
-  flex-direction: column;
+  border-style: solid;
 }
 
-.classic-card{
+.game-board__classic-game-button {
+  margin: 56px 0px 0px 150px;
+  border-radius: 68px;
+  padding-bottom: 20px;
+  position: absolute;
+}
+
+.game-board__classic-game-button,
+.game-board__difficult-game-btn {
   flex-direction: column;
+  cursor: pointer;
+  border-style: none;
+  background-color: #897CB6;
+}
+
+.game-board__difficult-game-btn {
+  margin: 90px 0px 7px 644px;
+  padding: 1px 8px;
+  border-radius: 76px;
+  align-items: center;
+  width: 604px;
+}
+
+.classic-card, .difficult-card{
+  flex-direction: column;
+  background: none;
+}
+
+.classic-card__cross-out {
+  height: 191px;
+  width: 175px;
+  position: absolute;
+  margin: -104px 0px 0px -197px;
+}
+
+.difficult-card__arrow-one {
+  height: 150px;
+  width: 150px;
+  margin: 138px 0px 0px 163px;
+}
+
+.difficult-card__arrow-two {
+  height: 148px;
+  width: 100px;
+  margin: -192px 0px 0px -145px;
+}
+
+.difficult-card__arrow-three {
+  height: 99px;
+  width: 191px;
+  margin: 135px 0px 0px -397px;
+}
+
+.difficult-card__arrow-one,
+.difficult-card__arrow-two,
+.difficult-card__arrow-three {
+  position: absolute;
 }
 
 .bottom-border {
   height: 20%;
   width: 100%;
   border-style: solid;
+}
+
+.bottom-border__player-name {
+  margin: 73px 0px 0px 19px;
+  position: absolute;
+}
+
+.bottom-border__player-win-count {
+  margin: 91px 0px 0px 24px;
+  position: absolute;
+}
+
+.bottom-border__player-icon {
+  height: 46px;
+  width: 46px;
+  margin: 24px 26px;
 }
